# sample_seqs

./: .gitignore  CMakeLists.txt  README.md
cmake_config/: README.cmake_config.md  sampling.cmake_config.h  test_sample_seqs.cmake_config.sh
include/: sampling.h
src/: sample_paired_and_single.c.backup  sample_seqs.c
test_files/: test.1.fq  test.2.fq  test.U.fq
test_files/expected/: lala.sample_0.1.fq  lala.sample_0.2.fq  lala.sample_0.U.fq  lala.sample_1.1.fq  lala.sample_1.2.fq  lala.sample_1.U.fq  lala.sample_2.1.fq  lala.sample_2.2.fq  lala.sample_2.U.fq
